# fp2-haskell

./: CHANGELOG.md  README.md  fp2-haskell.cabal  package.yaml  stack.yaml
.github/workflows/: main-ci.yml
.stack-work/: stack.sqlite3
.stack-work/ghci/824fceee/: cabal_macros.h
.stack-work/ghci/a7ffd8ed/: cabal_macros.h
.stack-work/ghci/d938735e/: cabal_macros.h
.stack-work/install/91663cd9/lib/x86_64-windows-ghc-9.6.6/fp2-haskell-0.1.0.0-1ITacZNQd7l2zTGsASFg7y/: Lib.hi  Main.hi  Paths_fp2_haskell.hi
.stack-work/install/91663cd9/lib/x86_64-windows-ghc-9.6.6/fp2-haskell-0.1.0.0-IU1CGe8EAEPJkqcAN1CXjs/: Lib.hi  Paths_fp2_haskell.hi
.stack-work/install/91663cd9/pkgdb/: fp2-haskell-0.1.0.0-1CLs14WvigLJiVlV9ijfL4.conf  package.cache
src/: Lib.hs  Main.hs
test/: Spec.hs
