cabal-version: 2.2

name:           fp2-haskell
version:        0.1.0.0
homepage:       https://github.com/githubuser/fp2-haskell#readme
author:         Author name here
maintainer:     example@example.com
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , hashable
  default-language: Haskell2010

executable fp2-haskell
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , containers
    , hashable

test-suite fp2-haskell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      HUnit
    , base >=4.7 && <5
    , fp2-haskell
